--- a/src/app/ModuloAdministracion/pg-negocio/pg-negocio.component.html
+++ b/src/app/ModuloAdministracion/pg-negocio/pg-negocio.component.html
@@ -1,20 +1,21 @@
   <div class="pagetitle">
-    <h1>Gestion de Materiales</h1>
+    <h1>Gestion de Negocios </h1>
   </div>
   <section class="section dashboard">
     <div class="card separador-componentes">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Materiales</h5>
+          <h5 class="card-title">Negocios</h5>
           <p-table
             #dt1
             [value]="lsListado"
+            dataKey="negocio_id"
             [rows]="10"
             [showCurrentPageReport]="true"
             [rowsPerPageOptions]="[10, 25, 50]"
             [paginator]="true"
             currentPageReportTemplate="Mostrar {first} - {last} de {totalRecords} elementos"
-            [globalFilterFields]="['nombre', 'propietario','tipo_negocio','direccion','telefono','fecharegistro', 'estado']"
+            [globalFilterFields]="['negocio_id','nombre', 'propietario','tipo_negocio','direccion','telefono','fecharegistro']"
             [scrollable]="true"
             scrollHeight="500px"
             [tableStyle]="{ 'min-width': '20rem' }"
@@ -31,6 +32,11 @@
             </ng-template>
             <ng-template pTemplate="header">
               <tr>
+                <th pSortableColumn="negocio_id">
+                  <div class="flex align-items-center">
+                      Id <p-sortIcon field="negocio_id"></p-sortIcon>
+                  </div>
+                </th>
                   <th pSortableColumn="nombre">
                       <div class="flex align-items-center">
                           Negocios <p-sortIcon field="nombre"></p-sortIcon>
@@ -56,14 +62,14 @@
                       Teléfono<p-sortIcon field="telefono"></p-sortIcon>
                     </div>
                   </th>
-                  <th pSortableColumn="direccion">
+                  <th pSortableColumn="image">
                     <div class="flex align-items-center">
-                      Imagen/logo
+                      Imagen/logo<p-sortIcon field="image"></p-sortIcon>
                     </div>
                   </th>
-                  <th pSortableColumn="direccion">
+                  <th pSortableColumn="fecharegistro">
                     <div class="flex align-items-center">
-                      Fecha de Registro <p-sortIcon field="telefono"></p-sortIcon>
+                      Fecha de Registro <p-sortIcon field="fecharegistro"></p-sortIcon>
                     </div>
                   </th>
                   <th pSortableColumn="estado">
@@ -80,13 +86,14 @@
           </ng-template>
           <ng-template pTemplate="body" let-customer>
             <tr>
+              <td>{{ customer.negocio_id }}</td>
               <td>{{ customer.nombre }}</td>
               <td>{{ customer.propietario }}</td>
               <td>{{ customer.tipo_negocio }}</td>
               <td>{{ customer.direccion }}</td>
               <td>{{ customer.telefono }}</td>
               <td>
-                <img *ngIf="customer.image" [src]="'data:image/jpeg;base64,' + customer.image" alt="Imagen"  max-width="250rem" max-height="250rem" width="100%" height="100%">
+                <img *ngIf="customer.image" [src]="'data:image/jpeg;base64,' + customer.image" alt="Imagen" min-width="175rem" max-width="125rem" width="200rem" height="150rem">
               </td>
               <td>{{ customer.fecharegistro | date:'short'}}</td>
 
@@ -178,7 +185,7 @@
   
       <label for="image" class="form-label" style="font-size: 14px;">Foto del Negocio: </label>
       <div class="p-inputgroup">
-        <p-fileUpload mode="basic" chooseLabel="Elegir" name="image" url="https://www.primefaces.org/cdn/api/upload.php" accept="image/*" [maxFileSize]="1000000" (onUpload)="onUpload($event)"></p-fileUpload>
+        <input class="form-control" type="file" id="formFile" accept="image/*" (change)="onFileSelected($event)" #fileInput>
         <div *ngIf="!objSeleccion.image" class="invalid-feedback floating-invalid-feedback">Debes subir una imagen del negocio.</div>
       </div>
     </ng-template>
