--- a/src/app/ModuloNegocio/pg-dashnegocio/pg-dashnegocio.component.html
+++ b/src/app/ModuloNegocio/pg-dashnegocio/pg-dashnegocio.component.html
@@ -208,7 +208,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="" (click)="SeccionDashboard($event)">
+        <a class="nav-link collapsed" href="" (click)="SeccionDashboard($event)">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -224,21 +224,6 @@
         <a class="nav-link collapsed" (click)="SeccionPuntosVerdes($event)" data-bs-toggle="collapse" href="#">
           <i class="bi bi-journal-text"></i><span>Mis puntos verdes</span>
         </a>
-        <!--
-        <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="" (click)="SeccionPuntosVerdes($event)">
-              <i class="bi bi-circle"></i><span>Ver puntos verdes</span>
-            </a>
-          </li>
-          <li>
-            <a href="" (click)="SeccionPuntosVerdes($event)">
-              <i class="bi bi-circle"></i><span>Nuevo punto verde</span>
-            </a>
-          </li>
-        </ul>
-        -->
-        
       </li><!-- End Forms Nav -->
 
       <li class="nav-item">
